--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "burmese-crossword",
+  "name": "crossword",
   "version": "1.0.0",
-  "description": "Generate Burmese / Myanmar-language crossword puzzles",
-  "scripts": {
-    "test": "mocha"
+  "description": "Generate multilingual crossword puzzles",
+  "bin": {
+    "crosswordjs": "cli.js"
   },
+  "main": "crossword-common.js",
   "author": "Nick Doiron <ndoiron@mapmeld.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "canvas": "^1.3.7",
+    "commander": "^2.9.0",
+    "myanmar-numbers": "^1.1.3"
+  }
 }
